"Email address" to "Email"

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -64,7 +64,7 @@
             name="email" 
             required 
             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
-            placeholder="Email address"/>
+            placeholder="Email"/>
         </div>
         <div id="Password" class="form-group row">
             <input 
